# pwr-neural-network-lab

./: .gitignore  lab_1_report.md  pyproject.toml
nn_labs/: debug_data.py  nnfs_io.py  test.md
nn_labs/affnist/: affnist_main.py  affnist_torch_main.py  data_processing.py  playground.ipynb
nn_labs/conv_lab/: testing.py
nn_labs/image_net/: autoencoded_classifier.py  lab_3.ipynb  load.py  main.py  playground.ipynb
nn_labs/nn/: activation_functions.py  initializers.py  layers.py  network.py  optimizers.py  perf.py  regularizers.py
