[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Philip Policki <philip.policki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
numpy = "^1.26.0"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
tqdm = "^4.66.1"

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
